# P4P-41

./: .gitignore  README.md
quartus/: .gitignore
quartus/isa-extension/modelsim/: cnn-isa-extension-simple.mpf
quartus/isa-extension/quartus/: CNN-ISA-Extension.qpf  CNN-ISA-Extension.qsf
quartus/isa-extension/quartus/rtl/: CNNISATypes.vhd  Clip.vhd  IntMax.vhd  IntReturnGreater.vhd  VClip.vhd  VIntMax.vhd  VIntReturnGreater.vhd  VMUL.vhd
quartus/isa-extension/quartus/rtl/operators/: Max.vhd  Min.vhd  README.md  ReturnGreater.vhd  ReturnLesser.vhd
quartus/isa-extension/quartus/testbenches/: CNNISATestbenchTypes.vhd  VIntMax_TestBench.vhd  VIntReturnGreater_TestBench.vhd  VMUL_TestBench.vhd
quartus/neorv32/test projects/de2-115/: README.md
quartus/project/qsys_vexriscv/: DE1_SoC_top_level.vhd  qsys0.qsys  qsys0.sopcinfo  rivercpu_qsys.qpf  rivercpu_qsys.qsf  rivercpu_qsys_assignment_defaults.qdf
quartus/project/qsys_vexriscv/.qsys_edit/: preferences.xml  qsys0.xml  qsys0_schematic.nlv
quartus/project/qsys_vexriscv/core/VexRiscvAvalon/: VexRiscvAvalon.vhd  VexRiscvAvalon_5.v  VexRiscvAvalon_hw.tcl
quartus/project/qsys_vexriscv/cores/P4P41VexRiscvAvalon/: .gitignore  VexRiscvAvalon.vhd  VexRiscvAvalon_5.v  VexRiscvAvalon_hw.tcl
quartus/project/qsys_vexriscv/cores/VexRiscvAvalon/: VexRiscvAvalon.vhd
quartus/project/qsys_vexriscv/output_files/: rivercpu_qsys.cdf  rivercpu_qsys.sld
quartus/project/qsys_vexriscv/qsys0/: qsys0.xml  qsys0_bb.v  qsys0_inst.v
quartus/project/qsys_vexriscv/qsys0/synthesis/: qsys0.debuginfo  qsys0.qip  qsys0.regmap  qsys0.vhd
quartus/project/qsys_vexriscv/sw/: Main.c  Makefile
quartus/project/rivercpu/de1/: river_stock.qsf  river_stock.vhd
quartus/stock/Workstation Setup/Linux/: Installation Log
quartus/stock/cv32e40x/: Stock_CV32E40X.qpf  Stock_CV32E40X.qsf
quartus/stock/cv32e40x-reattempt/: Stock_cv32e40x.qpf  Stock_cv32e40x.qsf
quartus/stock/cv32e40x-reattempt/rtl/: cv32e40x_custom_clock_gate.sv
quartus/stock/cv32e40x-reattempt/sv2v-Windows/script/: README.md  run.md  run.py  sv2v.py
quartus/stock/neorv32/: Stock_NEORV32.qpf  Stock_NEORV32.qsf
quartus/stock/neorv32-no-jtag/: Stock_NEORV32.qpf  Stock_NEORV32.qsf  platform_designer_system.qsys  platform_designer_system.sopcinfo
quartus/stock/neorv32-no-jtag/.qsys_edit/: platform_designer_system_schematic.nlv  preferences.xml
quartus/stock/neorv32-no-jtag/output_files/.qsys_edit/: preferences.xml
quartus/stock/neorv32-no-jtag/platform_designer_system/: platform_designer_system.bsf  platform_designer_system.xml  platform_designer_system_bb.v  platform_designer_system_inst.v
quartus/stock/neorv32-no-jtag/unsaved/: unsaved.bsf
quartus/stock/neorv32/output_files/: Stock_NEORV32.cdf
quartus/stock/neorv32/rtl/: neorv32_test_setup_approm.vhd  neorv32_test_setup_bootloader.vhd
quartus/stock/vexriscv/: .gitignore  DE1_SoC_Top_Level.vhd  README.md  stock-vexriscv.qpf  stock-vexriscv.qsf  vexriscv_system.qsys  vexriscv_system.sopcinfo
quartus/stock/vexriscv/.qsys_edit/: preferences.xml  vexriscv_system.xml  vexriscv_system_schematic.nlv
quartus/stock/vexriscv/compilation_reports/: stock-vexriscv-stock.cmp.rdb
quartus/stock/vexriscv/cores/: .gitignore  VexRiscv.v
quartus/stock/vexriscv/firmware/: CMakeLists.txt  Makefile  README.md  riscv_toolchain.cmake
quartus/stock/vexriscv/firmware/debug/: gdbgui.sh  openocd.sh  vexriscv_init.cfg
quartus/stock/vexriscv/firmware/debug/interface/: README.md
quartus/stock/vexriscv/firmware/src/: CMakeLists.txt  Main.c  custom_ops.S  hello.c  minimal.cpp  riscv_toolchain.cmake
quartus/stock/vexriscv/openOCD/: .gitignore  bootrom.elf
quartus/stock/vexriscv/output_files/: stock-vexriscv.cdf  stock-vexriscv.sld
quartus/stock/vexriscv/prebuilt/: README.md
quartus/stock/vexriscv/src/: VexRiscvAvalonMaxPerf.v
quartus/stock/vexriscv/sw/: FpgaConfig.h  Main.c  Makefile  custom_ops.S  debug.sh  link.ld
quartus/stock/vexriscv/sw/debug/: gdbgui.sh
quartus/stock/vexriscv/vexriscv_system/: vexriscv_system.xml  vexriscv_system_bb.v  vexriscv_system_inst.v
(+136 files in other folders)
